# bulletJSON

./: .gitignore  CMakeLists.txt  DEFINITION.md  IMPLEMENTATION.md  README.md  TODO.md  post-build.sh  pre-build.sh
docs/: BulletHellPatternEditor.js  BulletHellPatternEditor.wasm  README.md
docs/pattern-editor/: BulletJSONPatternEditor.js  BulletJSONPatternEditor.wasm  README.md  index.html
final-builds/Linux/: BulletHellPatternEditor
gh-pages/: BulletHellPatternEditor.data  BulletHellPatternEditor.wasm  index.html
lib/imgui/: version.txt
lib/json/: version.txt
lib/rlimgui/: rlImGui.cpp
pattern-editor/: CMakeLists.txt  README.md  post-build.sh  toolchain-mingw64.cmake
pattern-editor/.cache/clangd/index/: Editor.cpp.5ED9B81B6028F5BC.idx  Editor.hpp.18DC2FCFF7F4B855.idx  Game.cpp.7888F0B1C67AD7D6.idx  Game.hpp.D9AF3C23FF5E2A40.idx  GameManager.cpp.7819C0D32ECB9F0F.idx  GameManager.hpp.21FCCBC448058E02.idx  Global.hpp.9B255F1064DF71A5.idx  TextEditor.cpp.05C6DB50259F5BDD.idx  TextEditor.h.802AB1F40B52B85B.idx  Utils.cpp.3DEDEC5622A83F34.idx  Utils.hpp.5024D9A2FB9673A4.idx  cgltf.h.46B62DFD7A02DC01.idx  config.h.EDFFB71DE09DD30B.idx  context.c.A379C790124E2B83.idx  dr_mp3.h.E5C051C5D98DCE2E.idx  dr_wav.h.3D343FA8B135579A.idx  egl_context.c.36CA636216152B6C.idx  glad.h.3EB332755562644C.idx  glfw3.h.5556AAC56D2A6101.idx  glfw3native.h.277BB28B0B81B77C.idx  glx_context.c.98E9F1834A05AF74.idx  imconfig.h.29DA6BB074E4B523.idx  imgui.cpp.A4E07B4E607DC157.idx  imgui.h.D28C79019572774C.idx  imgui_demo.cpp.1C5413690887A8E3.idx  imgui_draw.cpp.6E9BF6C67360CDB8.idx  imgui_impl_raylib.h.C3AD0F1BED2EBA8E.idx  imgui_internal.h.21F6818CCE55C1C5.idx  imgui_tables.cpp.A1E0710533EF43EC.idx  imgui_widgets.cpp.0959949B77071D4B.idx  imstb_rectpack.h.957E6DC378B3B207.idx  imstb_textedit.h.97251CAE4A528709.idx  imstb_truetype.h.8ADB85D29DF9E02B.idx  init.c.30AC9581C528E352.idx  input.c.F4E5D20595E59A61.idx  internal.h.EF8AC1D33912BC9D.idx  jar_mod.h.9E71004022F374C3.idx  jar_xm.h.B87BF37788BE448C.idx  linux_joystick.c.A99CD15B5280A139.idx  linux_joystick.h.52505E3555748837.idx  (+62 more)
pattern-editor/assets/: texture-mapper.py  texture.json
pattern-editor/final-builds/Web/: BulletJSONPatternEditor.data
pattern-editor/lib/ImGuiColorTextEdit/: TextEditor.cpp  TextEditor.h  version.txt
pattern-editor/lib/imnodes/: README.md  imnodes.cpp  imnodes_internal.h  version.txt
pattern-editor/lib/raylib/: version.txt
pattern-editor/lib/rlimgui/: imgui_impl_raylib.h  rlImGui.h  version.txt
pattern-editor/src/: Bullet.cpp  Bullet.hpp  Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  Global.hpp  Utils.cpp
src/: Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  Global.hpp  Utils.cpp  Utils.hpp
